Fix to post header category alignment

--- a/_sass/_postStyle.scss
+++ b/_sass/_postStyle.scss
@@ -104,6 +104,10 @@
         margin-right: 1em;
     }
 
+    .post-category li.category {
+        margin-top: 0;
+    }
+
 }
 
 .post-heading {
